got the image upload to work but nav is still not working

--- a/face/src/app/app.component.html
+++ b/face/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 
 <router-outlet></router-outlet>
-
+<app-upload></app-upload>
 <a routerLink="/upload">Go to Upload Component</a>
+
 
