got dominant colours but does not work the best, will use kmeans later to get it working better

--- a/face/src/app/upload/upload.component.html
+++ b/face/src/app/upload/upload.component.html
@@ -8,5 +8,11 @@
       <h3>Image Preview:</h3>
       <img [src]="imagePreview" alt="Selected Image" width="300" />
     </div>
+    < <div *ngIf="paletteColors.length">
+        <h3>Dominant Colors:</h3>
+        <div class="color-palette">
+          <div *ngFor="let color of paletteColors" [ngStyle]="{'background-color': color}" class="color-box"></div>
+        </div>
+      </div>
   </div>
   
