--- a/src/my-app/src/components/style.css
+++ b/src/my-app/src/components/style.css
@@ -2572,3 +2572,30 @@ background-color: #2c3e50;
   margin: 0 0.5rem;
   font-weight: bold;
 }
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  height: 100vh; 
+  width: 100vw;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8); 
+  z-index: 999; 
+  text-align: center;
+}
+
+.loading-container img {
+  width: 10%; 
+  height: auto;
+  margin-bottom: 10px; 
+}
+
+.loading-container p {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
