--- a/src/my-app/src/components/style.css
+++ b/src/my-app/src/components/style.css
@@ -945,6 +945,8 @@ form {
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   position: relative;
+  width: 60%;
+  margin-top: 20px;
 }
 
 /* Delete Button */
@@ -2486,25 +2488,6 @@ background-color: #2c3e50;
   outline: none;
 }
 
-/* Job Posting Tags UI */
-.job-tags {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-top: 10px;
-  align-items: center;
-  margin-bottom: 1.5%;
-}
-
-.job-tag {
-  background-color: #2ba373;
-  color: white;
-  padding: 6px 12px;
-  border-radius: 15px;
-  font-size: 12px;
-  display: flex;
-  align-items: center;
-}
 
 .remove-tag {
   margin-left: 6px;
@@ -2735,4 +2718,22 @@ main::after {
 
 .jobtracker-chart-container {
   margin-bottom: 20px;
+}
+
+.custom-tags {
+  display: flex;           
+  flex-wrap: wrap;         
+  gap: 8px;              
+  margin-top: 8px;
+  border-radius: 6px;      
+  padding: 8px;           
+}
+
+.custom-tags .tag {
+  background-color: #e0e0e0;
+  padding: 6px 10px;         
+  border-radius: 4px;        
+  font-size: 0.9rem;
+  color: #333;
+  white-space: nowrap;       
 }
